# rules_l0

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
l0/: installer.bzl
l0/private/: extensions.bzl  repository.bzl
l0/private/rules/: ze_loader.BUILD  ze_loader_unix.BUILD  ze_loader_win32.BUILD
l0/private/template/: ze_loader.tpl
test/basic/: .gitignore  BUILD.bazel  MODULE.bazel  main.cc
test/prebuilt_binary/: MODULE.bazel
